# Gestalt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
dep/Box2D/Collision/Shapes/: b2EdgeShape.h
dep/Box2D/Dynamics/: b2Body.h  b2ContactManager.cpp  b2Fixture.h  b2WorldCallbacks.h
dep/Box2D/Dynamics/Joints/: b2GearJoint.h
dep/angelscript/src/: as_atomic.cpp  as_atomic.h  as_callfunc.cpp  as_compiler.cpp  as_config.h  as_context.cpp  as_context.h  as_gc.cpp  as_globalproperty.cpp  as_parser.cpp  as_restore.cpp  as_scriptengine.cpp  as_scriptfunction.cpp  as_scriptfunction.h  as_scriptobject.cpp  as_typeinfo.cpp
dep/angelscript/src/add-on/scriptstdstring/: scriptstdstring.h
dep/glad/: glad.h
dep/glad/src/: glad.c
dep/sol2/: sol.hpp
gestalt/: sp_alarm.h  sp_camera.h  sp_collider.h  sp_common.h  sp_database.h  sp_font_cache.h  sp_frame.h  sp_gl_err.h  sp_glyph.h  sp_image.h  sp_input.h  sp_input_manager.h  sp_layer.h  sp_material.h  sp_option.h  sp_prop.h  sp_render_text.h  sp_renderable.h  sp_renderer.h  sp_room.h  sp_shader.h  sp_shader_cache.h  sp_sim.h  sp_sprite.h  sp_sprite_cache.h  sp_state.h  sp_texture.h  sp_transform.h  sp_transition.h  sp_viewport.h  sp_window.h  std_filesystem.h
gestalt/src/: sp_alarm.cpp  sp_database.cpp  sp_font_cache.cpp  sp_frame.cpp  sp_input_manager.cpp  sp_prop.cpp  sp_render_text.cpp  sp_renderer.cpp  sp_shader.cpp  sp_shader_cache.cpp  sp_sim.cpp  sp_sprite_cache.cpp  sp_window.cpp
sim/: battle_actor.h  bt_sim.h  bt_state.h  bt_state_handler.h  bt_transition.h  game_state.h  menu_state.h  test_sim.h
sim/src/: bt_sim.cpp  game_state.cpp  menu_state.cpp  test_sim.cpp
sim/testing/: menu_state.cpp  menu_state.h  test_state.cpp  test_state.h
